jitsi-infra/jitsi-networking.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jitsi-ingress
  namespace: jitsi
  annotations:
    # AUTOMATION MAGIC: This line tells ExternalDNS to map Route 53
    external-dns.alpha.kubernetes.io/hostname: hrnbyl.rahulbastia.tech
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # Listen on both HTTP (80) and HTTPS (443)
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    # Force redirect all HTTP traffic to secure HTTPS
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # Your official AWS ACM Certificate ARN
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:444455570206:certificate/4ec194f1-f597-4fde-bc33-04f84959a2a3
spec:
  ingressClassName: alb
  rules:
    - host: hrnbyl.rahulbastia.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jitsi-jitsi-meet-web
                port:
                  number: 80
